[build-system]
requires = ["setuptools>=61", "setuptools-scm[toml]>=4.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "KaraboGUI"
dynamic = ["version"]
description = "This is the Karabo GUI"
authors = [{ name = "Karabo Team", email = "opensource@xfel.eu" }]
license = { text = "GPLv3+" }
urls = { Homepage = "http://karabo.eu" }

[project.scripts]
karabo-gui = "karabogui.programs.gui_runner:main"
panel-runner = "karabogui.programs.panel_runner:main"
karabo-cinema = "karabogui.programs.cinema:main"
karabo-concert = "karabogui.programs.concert:main"
karabo-theatre = "karabogui.programs.theatre:main"
karabo-update-extensions = "karabogui.dialogs.update_dialog:main"
karabo-register-protocol = "karabogui.programs.register_protocol:register_protocol"

[tool.setuptools.packages.find]
include = ["karabogui*"]

[tool.setuptools.package-data]
"karabogui.tests" = ["data/*.npy", "data/*.npz"]
"karabogui.binding.tests" = ["data/*.config", "data/*.schema"]
"karabogui.configurator.dialog" = ["*.ui"]
"karabogui.controllers" = ["*.ui", "display/ui/*.ui"]
"karabogui.controllers.display" = ["*.svg", "*.ui"]
"karabogui.graph.plots.dialogs" = ["*.ui"]
"karabogui.graph.common.dialogs" = ["*.ui"]
"karabogui.graph.image.dialogs" = ["*.ui"]
"karabogui.dialogs" = ["ui/*.ui", "tests/*.json"]
"karabogui.fonts" = ["*.*", "*/*"]
"karabogui.icons" = ["*.*", "statefulicons/iconset/*.svg"]
"karabogui.panels" = ["ui/*.ui"]
"karabogui.programs.tests" = ["concert.yml"]
"karabogui.project.dialog" = ["ui/*.ui"]
"karabogui.sceneview" = ["tests/data/*.svg"]
"karabogui.widgets" = ["ui/*.ui"]
"karabogui.wizards" = ["cinema/*.ui", "tips/*.html"]

[tool.setuptools_scm]
root = "../../"
write_to = "src/pythonGui/karabogui/_version.py"

[tool.isort]
combine_as_imports = true
include_trailing_comma = false
multi_line_output = 4
line_length = 79
known_first_party = ["karabo"]
src_paths = ["karabogui"]
