# This file is part of Karabo.
#
# http://www.karabo.eu
#
# Copyright (C) European XFEL GmbH Schenefeld. All rights reserved.
#
# Karabo is free software: you can redistribute it and/or modify it under
# the terms of the MPL-2 Mozilla Public License.
#
# You should have received a copy of the MPL-2 Public License along with
# Karabo. If not, see <https://www.mozilla.org/en-US/MPL/2.0/>.
#
# Karabo is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or
# FITNESS FOR A PARTICULAR PURPOSE.
[build-system]
requires = ["setuptools>=61", "setuptools-scm>=6", "wheel"]
build-backend = "setuptools.build_meta"

# Note: pyproject is NOT at repo root, so point to it.
[tool.setuptools_scm]
root = "../../"
write_to = "src/pythonKarabo/karabo/_version.py"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "module"
asyncio_default_test_loop_scope = "module"
asyncio_mode = "auto"

[tool.isort]
combine_as_imports = true
include_trailing_comma = false
multi_line_output = 4
line_length = 79
known_first_party = ["karabo", "karabind"]
src_paths = ["src"]
